--- a/menu.html
+++ b/menu.html
@@ -7,15 +7,13 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container">
-      <a href="/"><img src="assets/images/logo-lobster-shack.png" alt="Logo Lobster Shack" class="logo"></a>
-      <nav class="main-nav"><ul><li><a href="/">Home</a></li><li><a href="/menu.html">Menu</a></li><li><a href="/reservation.html">Reservasi</a></li></ul></nav>
-      <div class="header-actions">
-        <div class="lang-switcher"><a href="#" id="lang-id">ID</a><span>|</span><a href="#" id="lang-en">EN</a></div>
+      <div class="container">
+        <a href="/"><img src="assets/images/logo-lobster-shack.png" alt="Logo Lobster Shack" class="logo"></a>
+        <nav class="main-nav"><ul><li><a href="/">Home</a></li><li><a href="/menu.html">Menu</a></li><li><a href="/reservation.html">Reservasi</a></li></ul></nav>
         <a href="/reservation.html" class="btn">Reservasi</a>
       </div>
-    </div>
   </header>
+
   <main>
     <section class="section">
       <div class="container">
@@ -24,9 +22,31 @@
       </div>
     </section>
   </main>
+
+  <div id="menu-modal" class="modal-overlay hidden">
+    <div class="modal-content">
+      <button class="modal-close-btn">&times;</button>
+      <div id="modal-body">
+        <img id="modal-img" src="" alt="Menu item">
+        <h2 id="modal-title"></h2>
+        <p id="modal-price"></p>
+        <p id="modal-description"></p>
+        <hr>
+        <h3>Kirim Pesanan Ini</h3>
+        <div class="form-group">
+          <label for="delivery-address">Masukkan Alamat Pengiriman:</label>
+          <input type="text" id="delivery-address" placeholder="Mulai ketik alamat Anda...">
+        </div>
+        <button class="btn">Kirim ke Alamat Ini</button>
+      </div>
+    </div>
+  </div>
+
   <footer class="main-footer">
-    <div class="container"><p>&copy; <span id="current-year"></span> Lobster Shack Bali.</p></div>
+    <p>&copy; <span id="current-year"></span> Lobster Shack Bali.</p>
   </footer>
+
   <script type="module" src="assets/js/app.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADCv-AX09lIYq6Gr7Gm56rChp4kS0J08Q&libraries=places&callback=initMap"></script>
 </body>
 </html>
