--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobster Shack Bali - Wild-Caught Lobster Roll</title>
+  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lobster Shack Bali - Live & Wild-Caught Lobster</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
   <header class="main-header-slider">
     <div class="swiper">
-      <div class="swiper-wrapper" id="slider-container">
-        </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-wrapper" id="slider-container"></div>
+      <div class="swiper-pagination"></div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div>
     </div>
     <div class="navigation-overlay">
         <a href="/"><img src="assets/images/logo-lobster-shack.png" alt="Logo Lobster Shack" class="logo"></a>
@@ -23,40 +18,44 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/menu.html">Menu</a></li>
-            <li><a href="/reservation.html">Reservasi</a></li>
           </ul>
         </nav>
-        <a href="/reservation.html" class="btn">Reservasi</a>
+        <div class="header-actions">
+          <div id="user-auth-container">
+            <button id="login-btn" class="btn">Login with Google</button>
+            <div id="user-info" class="hidden">
+              <img id="user-avatar" src="" alt="User Avatar">
+              <button id="logout-btn" class="btn">Logout</button>
+            </div>
+          </div>
+        </div>
     </div>
   </header>
-
   <main>
-    <section id="company-profile" class="section animate-on-scroll">
-      <div class="container profile-container">
-        <div class="profile-image">
-          <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?q=80&w=1974&auto=format&fit=crop" alt="Tim Lobster Shack Bali">
-        </div>
-        <div class="profile-content">
-          <h2 id="profile-heading-en"></h2>
-          <p id="profile-p1-en"></p>
-          <p id="profile-p2-en"></p>
-        </div>
-      </div>
-    </section>
-
-    <section id="featured-menu" class="section animate-on-scroll" style="background-color: #fff;">
+    <section id="featured-menu" class="section animate-on-scroll">
         <div class="container">
-            <h2 class="section-title">Menu Unggulan</h2>
+            <h2 class="section-title">Menu Unggulan Kami</h2>
             <div id="menu-grid-container" class="menu-grid"><p>Memuat menu...</p></div>
         </div>
     </section>
   </main>
+  
+  <div id="order-modal" class="modal-overlay hidden">
+    <div class="modal-content">
+      <button class="modal-close-btn">&times;</button>
+      <div id="modal-body">
+        <h2 id="modal-title">Pesan Antar</h2>
+        <p>Anda memesan: <strong id="modal-item-name"></strong></p>
+        <div id="map" style="height: 300px; width: 100%; margin: 20px 0;"></div>
+        <p>Lokasi Pengiriman: <strong id="delivery-address">Memuat...</strong></p>
+        <button id="confirm-order-btn" class="btn">Konfirmasi Pesanan ke Lokasi Ini</button>
+      </div>
+    </div>
+  </div>
 
-  <footer class="main-footer">
-    <p>&copy; <span id="current-year"></span> Lobster Shack Bali. All Rights Reserved.</p>
-  </footer>
-
+  <footer class="main-footer"><p>&copy; <span id="current-year"></span> Lobster Shack Bali.</p></footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="module" src="assets/js/app.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADCv-AX09lIYq6Gr7Gm56rChp4kS0J08Q&libraries=places&callback=initMap"></script>
 </body>
 </html>
