--- a/login.html
+++ b/login.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Lobster Shack Bali</title>
-    <style>/* ... Salin SEMUA kode dari style.css sebelumnya di sini ... */</style>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <div class="form-page-wrapper">
         <div class="form-container">
-            <h1>Login</h1>
+            <h1>Login Akun</h1>
             <form id="login-form">
-                <div class="form-group"><label>Email</label><input type="email" id="login-email" required></div>
-                <div class="form-group"><label>Password</label><input type="password" id="login-password" required></div>
+                <div class="form-group">
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password" required>
+                </div>
                 <button type="submit" class="btn">Login</button>
             </form>
-            <p class="form-switch">Belum punya akun? <a href="/register.html">Daftar di sini</a></p>
-            <div id="form-error" class="form-message error hidden"></div>
+            <div id="form-message" class="form-message error hidden"></div>
+            <p class="form-switch">
+                Belum punya akun? <a href="/register.html">Daftar di sini</a>
+            </p>
         </div>
     </div>
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
-        const firebaseConfig = { /* ... Masukkan Konfigurasi Firebase Anda ... */ };
-        initializeApp(firebaseConfig);
-        const auth = getAuth();
-        
-        document.getElementById('login-form').addEventListener('submit', e => {
-            e.preventDefault();
-            const email = document.getElementById('login-email').value;
-            const password = document.getElementById('login-password').value;
-            signInWithEmailAndPassword(auth, email, password)
-                .then(() => window.location.href = '/')
-                .catch(err => document.getElementById('form-error').textContent = err.message);
-        });
-    </script>
+
+    <script type="module" src="/assets/js/auth.js"></script>
 </body>
 </html>
